[gd_scene load_steps=10 format=2]

[ext_resource path="res://source/UI/layers/dashboard/panels/equipment/EquipmentContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/UI/layers/dashboard/Dashboard.gd" type="Script" id=2]
[ext_resource path="res://source/UI/layers/dashboard/panels/inventory/Inventory.tscn" type="PackedScene" id=3]
[ext_resource path="res://source/UI/layers/dashboard/panels/account_info/AccountInfoContainer.tscn" type="PackedScene" id=4]
[ext_resource path="res://source/UI/layers/dashboard/panels/currency/CurrencyContainer.tscn" type="PackedScene" id=5]
[ext_resource path="res://source/UI/layers/dashboard/panels/stats/StatsContainer.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxEmpty" id=1]
content_margin_left = 80.0
content_margin_right = 80.0
content_margin_top = 45.0
content_margin_bottom = 45.0

[sub_resource type="StyleBoxEmpty" id=2]
content_margin_left = 15.0
content_margin_right = 15.0
content_margin_top = 15.0
content_margin_bottom = 15.0

[sub_resource type="StyleBoxEmpty" id=3]
content_margin_left = 15.0
content_margin_right = 15.0
content_margin_top = 15.0
content_margin_bottom = 15.0

[node name="Dashboard" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Bg" type="PanelContainer" parent="."]
margin_left = 80.0
margin_top = 45.0
margin_right = 1286.0
margin_bottom = 723.0

[node name="HBoxContainer" type="HBoxContainer" parent="Bg"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1199.0
margin_bottom = 671.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="LeftContainer" type="PanelContainer" parent="Bg/HBoxContainer"]
margin_right = 476.0
margin_bottom = 664.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
custom_styles/panel = SubResource( 2 )

[node name="LeftSector" type="VBoxContainer" parent="Bg/HBoxContainer/LeftContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 461.0
margin_bottom = 649.0
mouse_filter = 2
size_flags_vertical = 3
custom_constants/separation = 15

[node name="AccountInfoContainer" parent="Bg/HBoxContainer/LeftContainer/LeftSector" instance=ExtResource( 4 )]

[node name="EquipmentContainer" parent="Bg/HBoxContainer/LeftContainer/LeftSector" instance=ExtResource( 1 )]
margin_left = 128.0
margin_top = 56.0
margin_right = 318.0
margin_bottom = 318.0

[node name="StatsContainer" parent="Bg/HBoxContainer/LeftContainer/LeftSector" instance=ExtResource( 6 )]
margin_top = 346.0

[node name="RightContainer" type="PanelContainer" parent="Bg/HBoxContainer"]
margin_left = 476.0
margin_right = 1192.0
margin_bottom = 664.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6
custom_styles/panel = SubResource( 3 )

[node name="RightSector" type="VBoxContainer" parent="Bg/HBoxContainer/RightContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 701.0
margin_bottom = 649.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15

[node name="CurrencyContainer" parent="Bg/HBoxContainer/RightContainer/RightSector" instance=ExtResource( 5 )]

[node name="Inventory" parent="Bg/HBoxContainer/RightContainer/RightSector" instance=ExtResource( 3 )]
margin_top = 59.0
margin_right = 686.0
margin_bottom = 634.0

[node name="Close" type="Button" parent="Bg"]
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 1152.0
margin_top = 7.0
margin_right = 1199.0
margin_bottom = 27.0
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Close"

[connection signal="pressed" from="Bg/Close" to="." method="_on_Close_pressed"]
